# notebooklm_clone

./: .gitignore  compose.yaml
API/: Dockerfile  pyproject.toml
API/app/: main.py
API/app/core/: config.py  db.py  jwt.py  minio_client.py
API/app/features/auth/: router.py  schemas.py  service.py
API/app/features/files/: router.py  schemas.py  service.py
API/app/features/messages/: router.py
API/app/features/projects/: router.py  schemas.py  service.py
API/minio/data/.minio.sys/: format.json
FRONTEND/: package-lock.json  package.json
FRONTEND/src/app/: globals.css  layout.tsx  page.tsx
FRONTEND/src/app/(dashboard)/: layout.tsx
FRONTEND/src/app/notebook/: layout.tsx
FRONTEND/src/shared/: cookies.ts  general-providers.tsx  session-provider.tsx  typs.ts
embeddings-api/: README.md  actions.py  background_task.py  dependencies.py  main.py  pyproject.toml  schemas.py
embeddings-api/chroma_data/: chroma.sqlite3
frontend/: Dockerfile  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/shared/: cookies.ts
main-api/: Dockerfile  pyproject.toml
main-api/app/: main.py
main-api/app/core/: config.py  db.py  dependencies.py  embedding_api__requests.py  jwt.py  minio_client.py
main-api/app/features/auth/: router.py  service.py
main-api/app/features/files/: router.py  schemas.py  service.py
main-api/app/features/messages/: router.py  schemas.py  service.py
main-api/app/features/projects/: router.py  schemas.py  service.py
main-api/app/helpers/: validate_db.py
minio/data/.minio.sys/: format.json
(+52 files in other folders)
