[project]
name = "fastapiproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
    "webdavclient3>=3.14.7",
    "boto3>=1.34.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
